--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: scala
+
+script: "sbt ++$TRAVIS_SCALA_VERSION coverage test coverageReport"
+
 scala:
    - 2.12.4
+
 jdk:
   - oraclejdk9
